--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
             background-size: cover;
         }
 
-        /* Button Container */
         #button-container {
             display: flex;
             justify-content: center;
@@ -45,21 +44,17 @@
             transform: scale(1.1);
         }
 
-        /* Chatbox */
-        #chatbox {
+        #chatbox, #user-info {
             width: 90%;
             max-width: 400px;
-            height: 300px;
-            margin: 0 auto;
+            margin: 10px auto;
             background: white;
             border-radius: 10px;
-            overflow-y: auto;
             padding: 10px;
             border: 1px solid #ccc;
             text-align: left;
         }
 
-        /* Input Field */
         #input-container {
             width: 90%;
             max-width: 400px;
@@ -72,99 +67,143 @@
             align-items: center;
         }
 
-        #user-input {
+        #user-input, #name-input, #email-input {
             flex: 1;
             border: none;
             padding: 10px;
             outline: none;
             font-size: 16px;
         }
+
+        #start-chat {
+            width: 90%;
+            max-width: 400px;
+            margin: 10px auto;
+            padding: 10px;
+            font-size: 16px;
+            border: none;
+            background-color: blue;
+            color: white;
+            cursor: pointer;
+            border-radius: 5px;
+        }
     </style>
 </head>
 <body>
 
-    <!-- Buttons with Arrows -->
     <div id="button-container">
         <button class="arrow-button" onclick="prevImage()">⬅️</button>
         <button id="car-button" class="car-button" style="background-image: url('assets/1.png');"></button>
         <button class="arrow-button" onclick="nextImage()">➡️</button>
     </div>
 
-    <!-- Chatbox -->
-    <div id="chatbox"></div>
+    <div id="user-info">
+        <input type="text" id="name-input" placeholder="Enter your name..."><br><br>
+        <input type="email" id="email-input" placeholder="Enter your email..."><br><br>
+        <button id="start-chat" onclick="startChat()">Start Chat</button>
+    </div>
 
-    <!-- Input Field -->
-    <div id="input-container">
+    <div id="chatbox" style="display:none;"></div>
+
+    <div id="input-container" style="display:none;">
         <input type="text" id="user-input" placeholder="Type a message..." onkeypress="handleKeyPress(event)">
     </div>
 
     <script>
-     let images = [
-        { src: 'assets/1.png', name: "Foton Minibus" },
-        { src: 'assets/2.png', name: "eTruckmate" },
-        { src: 'assets/3.png', name: "eView Panel Van" },
-        { src: 'assets/4.png', name: "Tunland G7 Single Cab" },
-        { src: 'assets/5.png', name: "tunland G& Double Cab" }
-    ];
+        let images = [
+            { src: 'assets/1.png', name: "Foton Minibus" },
+            { src: 'assets/2.png', name: "eTruckmate" },
+            { src: 'assets/3.png', name: "eView Panel Van" },
+            { src: 'assets/4.png', name: "Tunland G7 Single Cab" },
+            { src: 'assets/5.png', name: "Tunland G7 Double Cab" }
+        ];
 
+        let currentIndex = 0;
+        let carButton = document.getElementById("car-button");
+        let selectedVehicle = images[0].name; // Default to first vehicle
+        let conversationHistory = []; // Store chat messages
+        let userName = "";
+        let userEmail = "";
 
-    let currentIndex = 0;
-    let carButton = document.getElementById("car-button");
-    let selectedVehicle = images[0].name; // Default to first vehicle
+        function prevImage() {
+            currentIndex = (currentIndex - 1 + images.length) % images.length;
+            carButton.style.backgroundImage = `url('${images[currentIndex].src}')`;
+            selectedVehicle = images[currentIndex].name;
+        }
 
-    function prevImage() {
-        currentIndex = (currentIndex - 1 + images.length) % images.length;
-        carButton.style.backgroundImage = `url('${images[currentIndex].src}')`;
-        selectedVehicle = images[currentIndex].name;
-    }
+        function nextImage() {
+            currentIndex = (currentIndex + 1) % images.length;
+            carButton.style.backgroundImage = `url('${images[currentIndex].src}')`;
+            selectedVehicle = images[currentIndex].name;
+        }
 
-    function nextImage() {
-        currentIndex = (currentIndex + 1) % images.length;
-        carButton.style.backgroundImage = `url('${images[currentIndex].src}')`;
-        selectedVehicle = images[currentIndex].name;
-    }
+        function startChat() {
+            userName = document.getElementById("name-input").value.trim();
+            userEmail = document.getElementById("email-input").value.trim();
+            
+            if (userName === "" || userEmail === "") {
+                alert("Please enter your name and email.");
+                return;
+            }
 
-    // Click to confirm vehicle selection
-    carButton.addEventListener("click", function() {
-        let chatbox = document.getElementById("chatbox");
-        chatbox.innerHTML += `<p><strong>Mary:</strong> You selected ${selectedVehicle}. Feel free to ask me anything about it!</p>`;
-    });
+            document.getElementById("user-info").style.display = "none";
+            document.getElementById("chatbox").style.display = "block";
+            document.getElementById("input-container").style.display = "flex";
+        }
 
-    async function sendMessage() {
-        let inputField = document.getElementById("user-input");
-        let chatbox = document.getElementById("chatbox");
-        let userMessage = inputField.value.trim();
-        if (userMessage === "") return;
+        async function sendMessage() {
+            let inputField = document.getElementById("user-input");
+            let chatbox = document.getElementById("chatbox");
+            let userMessage = inputField.value.trim();
+            if (userMessage === "") return;
 
-        chatbox.innerHTML += `<p><strong>You:</strong> ${userMessage}</p>`;
-        chatbox.scrollTop = chatbox.scrollHeight;
+            conversationHistory.push(`You: ${userMessage}`);
+            chatbox.innerHTML += `<p><strong>You:</strong> ${userMessage}</p>`;
+            chatbox.scrollTop = chatbox.scrollHeight;
 
-        try {
-            let response = await fetch("https://foton-server.onrender.com/message", {
+            try {
+                let response = await fetch("https://foton-server.onrender.com/message", {
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify({ 
+                        message: userMessage, 
+                        vehicle: selectedVehicle 
+                    })
+                });
+
+                let data = await response.json();
+                conversationHistory.push(`Mary: ${data.reply.join(' ')}`);
+                chatbox.innerHTML += `<p><strong>Mary:</strong> ${data.reply.join('<br>')}</p>`;
+                chatbox.scrollTop = chatbox.scrollHeight;
+            } catch (error) {
+                chatbox.innerHTML += `<p style="color:red;"><strong>Mary:</strong> Error contacting server.</p>`;
+            }
+
+            inputField.value = "";
+        }
+
+        function handleKeyPress(event) {
+            if (event.key === "Enter") {
+                sendMessage();
+            }
+        }
+
+        async function sendConversationToEmail() {
+            await fetch("https://foton-server.onrender.com/send-email", {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({ 
-                    message: userMessage, 
-                    vehicle: selectedVehicle // Send selected vehicle name
+                body: JSON.stringify({
+                    name: userName,
+                    email: userEmail,
+                    conversation: conversationHistory
                 })
             });
-            let data = await response.json();
-            chatbox.innerHTML += `<p><strong>Mary:</strong> ${data.reply.join('<br>')}</p>`;
-            chatbox.scrollTop = chatbox.scrollHeight;
-        } catch (error) {
-            chatbox.innerHTML += `<p style="color:red;"><strong>Mary:</strong> Error contacting server.</p>`;
+            alert("Conversation sent to sybrandswanepoel74@gmail.com");
         }
 
-        inputField.value = "";
-    }
-
-    function handleKeyPress(event) {
-        if (event.key === "Enter") {
-            sendMessage();
-        }
-    }
-</script>
-
+        window.onbeforeunload = sendConversationToEmail; // Send email before closing tab
+    </script>
 
 </body>
 </html>
+
