--- a/index.html
+++ b/index.html
@@ -14,51 +14,20 @@
             background-size: cover;
         }
 
-        #button-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 20px;
-        }
-
-        .arrow-button {
-            font-size: 24px;
-            background: none;
-            border: none;
-            cursor: pointer;
-            margin: 10px;
-        }
-
-        .car-button {
-            width: 180px;
-            height: 100px;
-            border: none;
-            background-size: cover;
-            background-position: center;
-            cursor: pointer;
-            border-radius: 10px;
-            transition: transform 0.2s;
-        }
-
-        .car-button:hover {
-            transform: scale(1.1);
-        }
-
         #chatbox {
-    width: 90%;
-    max-width: 400px;
-    margin: 10px auto;
-    background: white;
-    border-radius: 10px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    text-align: left;
-    height: 300px;  /* Fixed height */
-    overflow-y: auto;  /* Enable vertical scrolling */
-    display: flex;
-    flex-direction: column;
-}
-
+            width: 90%;
+            max-width: 400px;
+            margin: 10px auto;
+            background: white;
+            border-radius: 10px;
+            padding: 10px;
+            border: 1px solid #ccc;
+            text-align: left;
+            height: 300px;
+            overflow-y: auto;
+            display: flex;
+            flex-direction: column;
+        }
 
         #input-container {
             width: 90%;
@@ -72,89 +41,23 @@
             align-items: center;
         }
 
-        #user-input, #name-input, #email-input {
+        #user-input {
             flex: 1;
             border: none;
             padding: 10px;
             outline: none;
             font-size: 16px;
         }
-
-        #start-chat {
-            width: 90%;
-            max-width: 400px;
-            margin: 10px auto;
-            padding: 10px;
-            font-size: 16px;
-            border: none;
-            background-color: blue;
-            color: white;
-            cursor: pointer;
-            border-radius: 5px;
-        }
     </style>
 </head>
 <body>
-
-    <div id="button-container">
-        <button class="arrow-button" onclick="prevImage()">⬅️</button>
-        <button id="car-button" class="car-button" style="background-image: url('assets/1.png');"></button>
-        <button class="arrow-button" onclick="nextImage()">➡️</button>
-    </div>
-
-    <div id="user-info">
-        <input type="text" id="name-input" placeholder="Enter your name..."><br><br>
-        <input type="email" id="email-input" placeholder="Enter your email..."><br><br>
-        <button id="start-chat" onclick="startChat()">Start Chat</button>
-    </div>
-
     <div id="chatbox" style="display:none;"></div>
-
     <div id="input-container" style="display:none;">
         <input type="text" id="user-input" placeholder="Type a message..." onkeypress="handleKeyPress(event)">
     </div>
 
     <script>
-        let images = [
-            { src: 'assets/1.png', name: "Foton Minibus" },
-            { src: 'assets/2.png', name: "eTruckmate" },
-            { src: 'assets/3.png', name: "eView Panel Van" },
-            { src: 'assets/4.png', name: "Tunland G7 Single Cab" },
-            { src: 'assets/5.png', name: "Tunland G7 Double Cab" }
-        ];
-
-        let currentIndex = 0;
-        let carButton = document.getElementById("car-button");
-        let selectedVehicle = images[0].name; // Default to first vehicle
-        let conversationHistory = []; // Store chat messages
-        let userName = "";
-        let userEmail = "";
-
-        function prevImage() {
-            currentIndex = (currentIndex - 1 + images.length) % images.length;
-            carButton.style.backgroundImage = `url('${images[currentIndex].src}')`;
-            selectedVehicle = images[currentIndex].name;
-        }
-
-        function nextImage() {
-            currentIndex = (currentIndex + 1) % images.length;
-            carButton.style.backgroundImage = `url('${images[currentIndex].src}')`;
-            selectedVehicle = images[currentIndex].name;
-        }
-
-        function startChat() {
-            userName = document.getElementById("name-input").value.trim();
-            userEmail = document.getElementById("email-input").value.trim();
-            
-            if (userName === "" || userEmail === "") {
-                alert("Please enter your name and email.");
-                return;
-            }
-
-            document.getElementById("user-info").style.display = "none";
-            document.getElementById("chatbox").style.display = "block";
-            document.getElementById("input-container").style.display = "flex";
-        }
+        let selectedVehicle = "Foton Minibus"; 
 
         async function sendMessage() {
             let inputField = document.getElementById("user-input");
@@ -162,7 +65,6 @@
             let userMessage = inputField.value.trim();
             if (userMessage === "") return;
 
-            conversationHistory.push(`You: ${userMessage}`);
             chatbox.innerHTML += `<p><strong>You:</strong> ${userMessage}</p>`;
             chatbox.scrollTop = chatbox.scrollHeight;
 
@@ -177,9 +79,7 @@
                 });
 
                 let data = await response.json();
-                conversationHistory.push(`Mary: ${data.reply.join(' ')}`);
-                chatbox.innerHTML += `<p><strong>Mary:</strong> ${data.reply.join('<br>')}</p>`;
-                chatbox.scrollTop = chatbox.scrollHeight;
+                typeMessage(`Mary: ${data.reply.join(' ')}`);
             } catch (error) {
                 chatbox.innerHTML += `<p style="color:red;"><strong>Mary:</strong> Error contacting server.</p>`;
             }
@@ -187,27 +87,27 @@
             inputField.value = "";
         }
 
+        function typeMessage(message) {
+            let chatbox = document.getElementById("chatbox");
+            let messageElement = document.createElement("p");
+            chatbox.appendChild(messageElement);
+
+            let i = 0;
+            function type() {
+                if (i < message.length) {
+                    messageElement.innerHTML += message[i];
+                    i++;
+                    setTimeout(type, 50);
+                }
+            }
+            type();
+        }
+
         function handleKeyPress(event) {
             if (event.key === "Enter") {
                 sendMessage();
             }
         }
-
-        async function sendConversationToEmail() {
-            await fetch("https://foton-server.onrender.com/send-email", {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({
-                    name: userName,
-                    email: userEmail,
-                    conversation: conversationHistory
-                })
-            });
-            alert("Conversation sent to sybrandswanepoel@gmail.com");
-        }
-
-        window.onbeforeunload = sendConversationToEmail; // Send email before closing tab
     </script>
-
 </body>
 </html>
