--- a/index.html
+++ b/index.html
@@ -14,21 +14,52 @@
             background-size: cover;
         }
 
+        /* Button Container */
+        #button-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 20px;
+        }
+
+        .arrow-button {
+            font-size: 24px;
+            background: none;
+            border: none;
+            cursor: pointer;
+            margin: 10px;
+        }
+
+        .car-button {
+            width: 180px;
+            height: 100px;
+            border: none;
+            background-size: cover;
+            background-position: center;
+            cursor: pointer;
+            border-radius: 10px;
+            transition: transform 0.2s;
+        }
+
+        .car-button:hover {
+            transform: scale(1.1);
+        }
+
+        /* Chatbox */
         #chatbox {
             width: 90%;
             max-width: 400px;
-            margin: 10px auto;
+            height: 300px;
+            margin: 0 auto;
             background: white;
             border-radius: 10px;
+            overflow-y: auto;
             padding: 10px;
             border: 1px solid #ccc;
             text-align: left;
-            height: 300px;
-            overflow-y: auto;
-            display: flex;
-            flex-direction: column;
         }
 
+        /* Input Field */
         #input-container {
             width: 90%;
             max-width: 400px;
@@ -51,68 +82,89 @@
     </style>
 </head>
 <body>
+
+    <!-- Buttons with Arrows -->
+    <div id="button-container">
+        <button class="arrow-button" onclick="prevImage()">⬅️</button>
+        <button id="car-button" class="car-button" style="background-image: url('assets/1.png');"></button>
+        <button class="arrow-button" onclick="nextImage()">➡️</button>
+    </div>
+
+    <!-- Chatbox -->
     <div id="chatbox"></div>
+
+    <!-- Input Field -->
     <div id="input-container">
         <input type="text" id="user-input" placeholder="Type a message..." onkeypress="handleKeyPress(event)">
     </div>
 
     <script>
-        let selectedVehicle = "Foton Minibus"; 
+     let images = [
+        { src: 'assets/1.png', name: "Foton Minibus" },
+        { src: 'assets/2.png', name: "eTruckmate" },
+        { src: 'assets/3.png', name: "eView Panel Van" },
+        { src: 'assets/4.png', name: "Tunland G7 Single Cab" },
+        { src: 'assets/5.png', name: "tunland G& Double Cab" }
+    ];
 
-        window.onload = function() {
-            document.getElementById("chatbox").style.display = "block";
-            document.getElementById("input-container").style.display = "flex";
-        };
 
-        async function sendMessage() {
-            let inputField = document.getElementById("user-input");
-            let chatbox = document.getElementById("chatbox");
-            let userMessage = inputField.value.trim();
-            if (userMessage === "") return;
+    let currentIndex = 0;
+    let carButton = document.getElementById("car-button");
+    let selectedVehicle = images[0].name; // Default to first vehicle
 
-            chatbox.innerHTML += `<p><strong>You:</strong> ${userMessage}</p>`;
+    function prevImage() {
+        currentIndex = (currentIndex - 1 + images.length) % images.length;
+        carButton.style.backgroundImage = `url('${images[currentIndex].src}')`;
+        selectedVehicle = images[currentIndex].name;
+    }
+
+    function nextImage() {
+        currentIndex = (currentIndex + 1) % images.length;
+        carButton.style.backgroundImage = `url('${images[currentIndex].src}')`;
+        selectedVehicle = images[currentIndex].name;
+    }
+
+    // Click to confirm vehicle selection
+    carButton.addEventListener("click", function() {
+        let chatbox = document.getElementById("chatbox");
+        chatbox.innerHTML += `<p><strong>Mary:</strong> You selected ${selectedVehicle}. Feel free to ask me anything about it!</p>`;
+    });
+
+    async function sendMessage() {
+        let inputField = document.getElementById("user-input");
+        let chatbox = document.getElementById("chatbox");
+        let userMessage = inputField.value.trim();
+        if (userMessage === "") return;
+
+        chatbox.innerHTML += `<p><strong>You:</strong> ${userMessage}</p>`;
+        chatbox.scrollTop = chatbox.scrollHeight;
+
+        try {
+            let response = await fetch("https://foton-server.onrender.com/message", {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({ 
+                    message: userMessage, 
+                    vehicle: selectedVehicle // Send selected vehicle name
+                })
+            });
+            let data = await response.json();
+            chatbox.innerHTML += `<p><strong>Mary:</strong> ${data.reply.join('<br>')}</p>`;
             chatbox.scrollTop = chatbox.scrollHeight;
-
-            try {
-                let response = await fetch("https://foton-server.onrender.com/message", {
-                    method: "POST",
-                    headers: { "Content-Type": "application/json" },
-                    body: JSON.stringify({ 
-                        message: userMessage, 
-                        vehicle: selectedVehicle 
-                    })
-                });
-
-                let data = await response.json();
-                typeMessage(`Mary: ${data.reply.join(' ')}`);
-            } catch (error) {
-                chatbox.innerHTML += `<p style="color:red;"><strong>Mary:</strong> Error contacting server.</p>`;
-            }
-
-            inputField.value = "";
+        } catch (error) {
+            chatbox.innerHTML += `<p style="color:red;"><strong>Mary:</strong> Error contacting server.</p>`;
         }
 
-        function typeMessage(message) {
-            let chatbox = document.getElementById("chatbox");
-            let messageElement = document.createElement("p");
-            chatbox.appendChild(messageElement);
+        inputField.value = "";
+    }
 
-            let i = 0;
-            function type() {
-                if (i < message.length) {
-                    messageElement.innerHTML += message[i];
-                    i++;
-                    setTimeout(type, 50);
-                }
-            }
-            type();
+    function handleKeyPress(event) {
+        if (event.key === "Enter") {
+            sendMessage();
         }
+    }
+</script>
 
-        function handleKeyPress(event) {
-            if (event.key === "Enter") {
-                sendMessage();
-            }
-        }
-    </script>
+
 </body>
 </html>
